# My-Ontology-Editor

./: .gitignore  Cargo.toml  README.md
src/: aliases.rs  application.rs  main.rs  migrations.rs  modules.rs
src/migrations/: 002_semantic_nodes_relations_table.sql
src/modules/: app.rs  app_dirs.rs  arc_buffer.rs  consts.rs  db_module.rs  graphics.rs  graphics_module.rs  logger.rs  logic.rs  logic_module.rs  migrations.rs  shared.rs
src/modules/app/: app_dirs.rs  app_error.rs  app_error_hanlding.rs  app_event.rs  app_kernel.rs  app_state.rs  app_style.rs  app_task.rs  confirmation_context.rs  gui.rs  id.rs  project.rs  time_detector.rs
src/modules/app/app_event/: creating_project_event.rs  initialisation_event.rs  open_project_event.rs
src/modules/app/app_kernel/: app_event_handling.rs  app_kernel_error.rs  gui_affects_handling.rs
src/modules/app/app_task/: app_task_manager.rs
src/modules/app/confirmation_context/: confirmation_context_manager.rs
src/modules/app/gui/: gui_affect.rs  gui_command.rs  gui_error.rs  gui_event.rs  gui_event_handling.rs  gui_state.rs  main_gui.rs  modal_window.rs  on_command.rs
src/modules/app/project/: project_cache.rs  project_error.rs  project_file_header.rs  project_id.rs  project_manager.rs  project_meta.rs  project_view.rs  project_view_manager.rs  projects_cache.rs  semantic_node.rs
src/modules/db_module/: commands.rs  db_connect_cache.rs  db_core.rs  db_module_handler.rs  event_loop.rs  events.rs
src/modules/db_module/db_core/: db_core_logic.rs  db_core_state.rs  db_core_state_handle.rs  handle_db_event_error.rs  project_db.rs
src/modules/graphics/: events.rs  graphics_core.rs  graphics_data.rs  graphics_states.rs  ui.rs
src/modules/graphics/events/: graphics_event.rs
src/modules/graphics/graphics_core/: handle_graphics_event.rs  handle_redraw.rs  handle_redraw_error.rs  redraw_error_handle.rs  register_graphics_event.rs
src/modules/graphics/graphics_data/: graphics_backend_data.rs  ui_data.rs
src/modules/graphics/graphics_states/: graphics_backend_state.rs  ui_state.rs
src/modules/graphics/ui/: modal_windows.rs  panels.rs  ui_affect.rs  ui_affects_processing.rs  ui_state_processing.rs
src/modules/graphics_module/: events.rs  graphics_backend.rs  graphics_core.rs  logic_adapter.rs  task_cache.rs  ui.rs
src/modules/graphics_module/graphics_backend/: egui_backend.rs  wgpu_backend.rs
src/modules/graphics_module/graphics_core/: graphic_core_error.rs  graphic_core_state.rs  graphic_core_state_handle.rs  graphic_event_error.rs  graphics_core_error_handle.rs  graphics_core_logic.rs  graphics_event.rs  graphics_event_error_handle.rs  handle_graphics_event_error.rs  pending_task.rs
src/modules/graphics_module/task_cache/: task_context.rs
src/modules/graphics_module/ui/: events.rs  (+9 more)
src/modules/logic/: events.rs  logic_core.rs
src/modules/logic_module/: confirmation_cache.rs  db_core.rs  event_loop.rs  event_manager.rs  events.rs  infrastructure.rs  job_manager.rs  logic_core.rs  logic_module_handler.rs  logic_module_io.rs  prelude.rs  project.rs  project_cache.rs  project_manager.rs  project_view.rs
src/modules/migrations/: 001_semantic_nodes_table.sql  003_files_table.sql
src/modules/shared/: db_module_handler.rs  logic_module_handler.rs  project_manager.rs  task_id.rs
(+171 files in other folders)
