[package]
name = "my_ontology_editor"
version = "0.1.0"
edition = "2024"
authors = ["Iana Vinnishchuk"]

[dependencies]
# Graphic crates
wgpu = "27.0.1"
winit = "0.30.12"
egui = "0.33.3"
egui-winit = "0.33.3"
egui-wgpu = {version = "0.33.3", features = ["wayland", "winit"]}

# For blocking spawn async func
pollster = "0.4.0"

# Error Handling
anyhow = "1.0.101"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"]}
tracing-appender = "0.2.4"

# For working with file system (For default paths in OS)
directories = "6.0.0"
# For declarative working with catalog structure
tree-fs = "0.3.1"

# For file dialog 
egui-file-dialog = "0.12.0"

# Event Loop crate
calloop = { version = "0.14.4", features = []}

# For SQLite
rusqlite = { version = "0.38.0", features = ["bundled"] }

# For UUID 
uuid = { version = "1.21.0", features = ["v4", "serde"] }

# For Serialisation 
serde = { version = "1.0.228", features = ["derive"]}
toml = { version = "1.0.2", features = []}


