[package]
name = "my_ontology_editor"
version = "0.1.0"
edition = "2024"
authors = ["Iana Vinnishchuk"]

[dependencies]
eframe = {version = "0.33.3", features = []}
tokio = {version = "1.50.0", features = ["rt-multi-thread"]}

# Error Handling
anyhow = "1.0.101"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"]}
tracing-appender = "0.2.4"

# For working with file system (For default paths in OS)
directories = "6.0.0"

# For DB 
sqlx = {version = "0.8.6", features = ["runtime-tokio", "sqlite", "uuid"]}

# For file dialog 
egui-file-dialog = "0.12.0"

# For UUID 
uuid = { version = "1.21.0", features = ["v4", "v7", "serde"] }

# For Serialisation 
serde = { version = "1.0.228", features = ["derive"]}
toml = { version = "1.0.2", features = []}

# For CTRL+C Handling
ctrlc = "3.5.2"

# For Tar archive
astral-tokio-tar = "0.6.0"
